--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | CozyInnGame</title>
-    <section>
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfXzHTiY_I6yJhjVIlJwdmGPfa3pugkfDvPRt10ADebWibQxg/viewform?embedded=true" width="640" height="2758" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-      </section>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -121,7 +118,7 @@
       document.body.appendChild(script);
 
     </script>
-
+<a href="iframe.html">Open Form</a>
   </body>
 
 </html>
