--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       document.body.appendChild(script);
 
     </script>
-<a href="iframe.html">Open Form</a>
+<a href="iframe.html">Tester Questionare</a>
   </body>
 
 </html>
